fix spacing in home

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   color: rgb(242, 242, 242);
+  word-spacing: 2px;
 }
 
 .footer-container p {
